@@ -1,3 +1,7 @@
+* Eliminated an assignment of $VERSION into itself to "get rid of warnings"
+- only caused warnings at Build.PL, and is unnecessary now that we
+"use vars".
+
 Version 2.43:  ( Thu Dec  4 18:56:02 IST 2008 )
 -----------------------------------------------
 
